ref #997 stateless handle session/context delete in redis mode